// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu should match snapshot 1`] = `
<div>
  <div
    class="dropdown-content"
  />
</div>
`;

exports[`Menu should match snapshot 2`] = `
<div>
  <div
    class="dropdown-content"
  >
    <a
      href="#home"
    >
      Home
    </a>
    <a
      href="#about"
    >
      About
    </a>
    <a
      href="#contact"
    >
      Contact
    </a>
  </div>
</div>
`;
